# biotracker_lucasKanade

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt
Src/: BioTrackerPlugin.cpp  BioTrackerPlugin.h  CMakeLists.txt  Config.cpp  Config.h  PluginContext.cpp  PluginContext.h  plugin.json.in
Src/Controller/: ControllerTrackedComponent.cpp  ControllerTrackedComponent.h  ControllerTrackingAlgorithm.cpp  ControllerTrackingAlgorithm.h
Src/Model/: BioTrackerTrackingAlgorithm.cpp  BioTrackerTrackingAlgorithm.h  TrackerParameter.cpp  TrackerParameter.h
Src/View/: TrackedElementView.cpp  TrackerParameterView.cpp  TrackerParameterView.h  TrackerParameterView.ui
cmake/WIX/: WIX.template.in
